# mvn-mcp-server

./: .flake8  .gitignore  .mcp.json  AI_EVOLUTION.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DOCUMENTATION_AUDIT.md  README.md  SUPPORT.md  mypy.ini  pyproject.toml  release-please-config.json  server.json  setup.cfg
.claude/: settings.local.json
.claude/commands/: add-feature.md  feature-add.md  init.md
.github/: copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: copilot-task.md
.github/workflows/: ci.yml  copilot-assign.yml  copilot-setup-steps.yml  release.yml  security.yml
ai_docs/: maven-search.md  sample-mcp-server.md  sample_readme.md
docs/: PUBLISHING.md  QUICK_PUBLISH.md  project-architect.md  project-brief.md  project-prd.md  project-publishing.md  project-usage.md
docs/adr/: 001-mcp-framework-selection.md  002-synchronous-architecture-choice.md  003-in-memory-caching-strategy.md  004-direct-maven-central-integration.md  005-comprehensive-single-call-pattern.md  006-flexible-version-parsing-strategy.md  007-service-layer-architecture.md  008-mock-based-testing-strategy.md  (+5 more)
specs/: check-maven-version-exists-spec.md  check_version_batch_spec.md  check_version_spec.md  find-maven-latest-component-version-spec.md  get-maven-latest-version-spec.md  init-mcp-spec.md  list-available-versions-spec.md  list_available_versions_spec.md  maven-version-tools-spec.md  pom-dependency-detect-spec.md  prompts_spec.md  refactor-spec.md  security_scan_enhancement_spec.md  security_scan_spec.md
(+53 files in other folders)
