[project]
name = "mvn-mcp-server"
version = "0.1.0"
description = "A MCP server for Maven dependency version checking"
authors = [
    {name = "Daniel Scholl", email = "daniel.scholl@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.7.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
]

[project.scripts]
mvn-mcp-server = "mvn_mcp_server.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest]
testpaths = ["src/mvn_mcp_server/tests"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "mypy"
]